landing page added

--- a/src/app/components/public/landing-page/landing-page.component.html
+++ b/src/app/components/public/landing-page/landing-page.component.html
@@ -1,1 +1,29 @@
-<p>landing-page works!</p>
+<!-- <p>landing-page works!</p> -->
+<div class="container">
+  <div class="banner"></div>
+  <div class="main">
+    <div class="search-box">
+      <div class="input-box">
+        <mat-icon aria-hidden="false" fontIcon="search" class="search-icon"></mat-icon>
+        <input type="text" name="" id="" placeholder="Search Programs" />
+        <button class="button">Search</button>
+      </div>
+    </div>
+    <h1>Let's Start Learning, Username</h1>
+    <div class="card-grid">
+      <app-landing-program-card></app-landing-program-card>
+      <app-landing-program-card></app-landing-program-card>
+      <app-landing-program-card></app-landing-program-card>
+      <app-landing-program-card></app-landing-program-card>
+    </div>
+    <h1>Recommended Programs</h1>
+    <div class="card-grid">
+      <app-landing-program-card></app-landing-program-card>
+      <app-landing-program-card></app-landing-program-card>
+      <app-landing-program-card></app-landing-program-card>
+      <app-landing-program-card></app-landing-program-card>
+      <app-landing-program-card></app-landing-program-card>
+      <app-landing-program-card></app-landing-program-card>
+    </div>
+  </div>
+</div>
