--- a/src/app/components/public/landing-program-card/landing-program-card.component.html
+++ b/src/app/components/public/landing-program-card/landing-program-card.component.html
@@ -1,1 +1,10 @@
-<p>landing-program-card works!</p>
+<div class="card">
+    <div class="card-img">
+        <img src="../../../../assets/images/anato-finnstark-berserk.jpg" alt="">
+    </div>
+    <div class="card-content">
+        <h2 class="card-title">UI Development</h2>
+        <p class="card-text">Sonal Patel</p>
+        <p class="card-text">Enrolled Students - 50</p>
+    </div>
+</div>
