--- a/src/app/components/reusable/program-grades-details/program-grades-details.component.html
+++ b/src/app/components/reusable/program-grades-details/program-grades-details.component.html
@@ -1,1 +1,161 @@
-<p>program-grades-details works!</p>
+<!-- Main Heading -->
+<div class="tab-heading">
+    <div>
+        <button mat-mini-fab color="basic" class="tab-heading-back-button" [routerLink]="['/my-grades']">
+            <mat-icon>arrow_back</mat-icon>
+        </button>
+    </div>
+    <div class="tab-heading-text">
+        Program Grades
+    </div>
+</div>
+<div class="tab-container">
+
+    <!-- card in category -->
+    <div class="report_card">
+        <div class="category">
+            <!-- 1 -->
+            <div class="card">
+                <div class="circle">
+                    <h1 class="rc_header">Non Technical Aspects</h1>
+                    <circle-progress [percent]="100" [radius]="75" [showSubtitle]="true" [outerStrokeWidth]="10"
+                        [showTitle]="false" subtitleFontSize=75 [showUnits]="false" [subtitle]="'A+'"
+                        [showInnerStroke]='false' [subtitleColor]="'white'" [outerStrokeColor]="'#78C000'"
+                        [animation]="true" [animationDuration]="500"></circle-progress>
+                </div>
+                <div>
+                    <table class="content" class="rc_table">
+                        <tr>
+                            <td>Communication</td>
+                            <td>A</td>
+                        </tr>
+                        <tr>
+                            <td>Initiative</td>
+                            <td>A+</td>
+                        </tr>
+                        <tr>
+                            <td>Project</td>
+                            <td>A+</td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+            <!-- 2 -->
+            <div class="card">
+                <div class="circle">
+                    <h1 class="rc_header">Non Technical Aspects</h1>
+                    <circle-progress [percent]="100" [radius]="75" [showSubtitle]="true" [outerStrokeWidth]="10"
+                        [showTitle]="false" subtitleFontSize=75 [showUnits]="false" [subtitle]="'A+'"
+                        [showInnerStroke]='false' [subtitleColor]="'white'" [outerStrokeColor]="'#78C000'"
+                        [animation]="true" [animationDuration]="500" class="kl"></circle-progress>
+                </div>
+                <div>
+                    <table class="content" class="rc_table">
+                        <tr>
+                            <td>Communication</td>
+                            <td>A</td>
+                        </tr>
+                        <tr>
+                            <td>Initiative</td>
+                            <td>A+</td>
+                        </tr>
+                        <tr>
+                            <td>Project</td>
+                            <td>A+</td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+            <!-- 3 -->
+            <div class="card">
+                <div class="circle">
+                    <h1 class="rc_header">Non Technical Aspects</h1>
+                    <circle-progress [percent]="100" [radius]="75" [showSubtitle]="true" [outerStrokeWidth]="10"
+                        [showTitle]="false" subtitleFontSize=75 [showUnits]="false" [subtitle]="'A+'"
+                        [showInnerStroke]='false' [subtitleColor]="'white'" [outerStrokeColor]="'#78C000'"
+                        [animation]="true" [animationDuration]="500"></circle-progress>
+                </div>
+                <div>
+                    <table class="content" class="rc_table">
+                        <tr>
+                            <td>Communication</td>
+                            <td>A</td>
+                        </tr>
+                        <tr>
+                            <td>Initiative</td>
+                            <td>A+</td>
+                        </tr>
+                        <tr>
+                            <td>Project</td>
+                            <td>A+</td>
+                        </tr>
+                        <tr>
+                            <td>Communication</td>
+                            <td>A</td>
+                        <tr>
+                            <td>Communication</td>
+                            <td>A</td>
+                        <tr>
+                            <td>Communication</td>
+                            <td>A</td>
+                    </table>
+                </div>
+            </div>
+            <!-- 4 -->
+            <div class="card">
+                <div class="circle">
+                    <h1 class="rc_header">Non Technical Aspects</h1>
+                    <circle-progress [percent]="100" [radius]="75" [showSubtitle]="true" [outerStrokeWidth]="10"
+                        [showTitle]="false" subtitleFontSize=75 [showUnits]="false" [subtitle]="'A+'"
+                        [showInnerStroke]='false' [subtitleColor]="'white'" [outerStrokeColor]="'#78C000'"
+                        [animation]="true" [animationDuration]="500" class="kl"></circle-progress>
+                </div>
+                <div>
+                    <table class="content" class="rc_table">
+                        <tr>
+                            <td>Communication</td>
+                            <td>A</td>
+                        </tr>
+                        <tr>
+                            <td>Initiative</td>
+                            <td>A+</td>
+                        </tr>
+                        <tr>
+                            <td>Project</td>
+                            <td>A+</td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+            <!-- 5 -->
+            <div class="card">
+                <div class="circle">
+                    <h1 class="rc_header">Non Technical Aspects</h1>
+                    <circle-progress [percent]="100" [radius]="75" [showSubtitle]="true" [outerStrokeWidth]="10"
+                        [showTitle]="false" subtitleFontSize=75 [showUnits]="false" [subtitle]="'A+'"
+                        [showInnerStroke]='false' [subtitleColor]="'white'" [outerStrokeColor]="'#78C000'"
+                        [animation]="true" [animationDuration]="500"></circle-progress>
+                </div>
+                <div>
+                    <table class="content" class="rc_table">
+                        <tr>
+                            <td>Communication</td>
+                            <td>A</td>
+                        </tr>
+                        <tr>
+                            <td>Initiative</td>
+                            <td>A+</td>
+                        </tr>
+                        <tr>
+                            <td>Project</td>
+                            <td>A+</td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+        </div>
+        <div class="btn">
+            <button mat-raised-button color="primary" class="download-btn">Download Certificate</button>
+        </div>
+    </div>
+</div>
