--- a/src/app/components/admin/assign-role/assign-role.component.html
+++ b/src/app/components/admin/assign-role/assign-role.component.html
@@ -1,80 +1,45 @@
-<form (ngSubmit)="onLogin()" name="assignRoleForm" [formGroup]="assignRoleForm">
-  <mat-card>
-    <mat-card-content>
-      <div class="header">
-        <h2>enter Email and Password for Asignee</h2>
-      </div>
+<div class="tab-heading">
+  <div class="tab-heading-text">Role Assignment</div>
+</div>
 
-      <div class="emailInput">
-        <mat-form-field class="full-width" appearance="outline">
-          <mat-label>Email</mat-label>
-          <input
-            formControlName="email"
-            matInput
-            placeholder="Enter email address"
-            required
-          />
-          <mat-error *ngIf="!assignRoleForm.controls['email'].valid">
-            Email is required
-          </mat-error>
-        </mat-form-field>
-      </div>
+<div class="tab-container">
+  <button class="tab-container-button" mat-raised-button color="primary">
+    <mat-icon>assignment</mat-icon> Assign Role
+  </button>
 
-      <div>
-        <mat-form-field class="full-width" appearance="outline">
-          <mat-label>Password</mat-label>
-          <input
-            formControlName="password"
-            matInput
-            [type]="hide ? 'password' : 'text'"
-            required
-          />
-          <button
-            mat-icon-button
-            matSuffix
-            (click)="hide = !hide"
-            [attr.aria-label]="'Hide Password'"
-            [attr.aria-pressed]="hide"
-          >
-            <mat-icon>
-              {{ hide ? "visibility_off" : "visibility" }}
-            </mat-icon>
-          </button>
-          <mat-error *ngIf="!assignRoleForm.controls['password'].valid">
-            Password is required
-          </mat-error>
-        </mat-form-field>
-      </div>
-    </mat-card-content>
-  </mat-card>
-  <mat-card>
-    <mat-card-content>
-      <div class="header">
-        <h2>select Privilages for Asignee</h2>
-      </div>
+  <div class="table-container">
+    <div class="assignRole-table-container" #TABLE>
+      <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+        <!--- Note that these columns can be defined in any order.
+              The actual rendered columns are set as a property on the row definition" -->
 
-      <mat-selection-list #list (selectionChange)="onSelectionChange($event)">
-        <mat-list-option
-          class="selectionList"
-          *ngFor="let privilage of privilages"
-          [value]="privilage.privilage"
-        >
-          {{ privilage.privilage }}
-        </mat-list-option>
-      </mat-selection-list>
+        <!-- Position Column -->
+        <ng-container matColumnDef="position">
+          <th mat-header-cell *matHeaderCellDef>No.</th>
+          <td mat-cell *matCellDef="let element">{{ element.position }}</td>
+        </ng-container>
 
-      <!-- <mat-checkbox [(ngModel)]="selectAll" (click)="toggleSelectAll()"
-        >{{ selectAll ? "Deselect All" : "Select All" }}></mat-checkbox
-      > -->
+        <!-- Name Column -->
+        <ng-container matColumnDef="name">
+          <th mat-header-cell *matHeaderCellDef>Name</th>
+          <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+        </ng-container>
 
-      <div class="showSelected">
-        <p>
-          you have selected {{ list.selectedOptions.selected.length }} Which are
-          {{ selectedOptions | json }}
-        </p>
-      </div>
+        <!-- Weight Column -->
+        <ng-container matColumnDef="weight">
+          <th mat-header-cell *matHeaderCellDef>Weight</th>
+          <td mat-cell *matCellDef="let element">{{ element.weight }}</td>
+        </ng-container>
 
-      <button mat-flat-button color="primary">Assign / Revoke</button>
-    </mat-card-content>
-  </mat-card>
-</form>
+        <!-- Symbol Column -->
+        <ng-container matColumnDef="symbol">
+          <th mat-header-cell *matHeaderCellDef>Symbol</th>
+          <td mat-cell *matCellDef="let element">{{ element.symbol }}</td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+      </table>
+    </div>
+  </div>
+</div>
