--- a/src/app/components/reusable/program-grades-details/program-grades-details.component.css
+++ b/src/app/components/reusable/program-grades-details/program-grades-details.component.css
@@ -1,144 +1,144 @@
-html, body {
-    margin: 0;
+html,
+body {
+  margin: 0;
 }
 
 /* Styles for dashboard and its containers */
 .tab-heading {
-    display: flex;
-    align-items: center;
-    padding: 20px;
-    height: calc(8vh - 44px);
-    margin: 0 0 12px 0;
-    background-color: white;
-    border-radius: 20px;
-    border: 1px solid lightgray;
+  display: flex;
+  align-items: center;
+  padding: 20px;
+  height: calc(8vh - 44px);
+  margin: 0 0 12px 0;
+  background-color: white;
+  border-radius: 20px;
+  border: 1px solid lightgray;
 }
 
 .tab-container {
-    padding: 20px;
-    overflow: auto;
-    height: calc(100vh - 8vh - 76px - 64px);
-    background-color: white;
-    border-radius: 20px;
-    border: 1px solid lightgray;
+  padding: 20px;
+  overflow: auto;
+  height: calc(100vh - 8vh - 76px - 64px);
+  background-color: white;
+  border-radius: 20px;
+  border: 1px solid lightgray;
 }
 
 .tab-heading-text {
-    font-size: x-large;
-    text-align: center;
-    font-weight: 500;
+  font-size: x-large;
+  text-align: center;
+  font-weight: 500;
 }
 
 .tab-heading-back-button {
-    margin-right: 20px;
+  margin-right: 20px;
 }
 
 .tab-container-flex {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .tab-container-button {
-    margin: 10px;
+  margin: 10px;
 }
 
 .tab-container-flex-grow {
-    flex-grow: 1;
+  flex-grow: 1;
 }
 
 /* report card CSS*/
 .report_card {
-    display: flex;
-    flex-direction: column;
-    /* border:1px solid black; */
-    width: 100%;
-    /* margin: auto; */
-    /* margin-left: -130px; */
-  }
-  
-  .category {
-    /* border: 1px solid black; */
-    display: flex;
-    /* flex-direction: row; */
-    flex-wrap: wrap;
-    width: 100%;
-    /* position: absolute; */
-  }
-  
-  /* circle-progress & table */
-  .cp_t {
-    width: 70%;
-    display: flex;
-    flex-direction: row;
-    /* margin: auto;    */
-  }
-  
-  /* report-card header */
-  .rc_header {
-    padding: 10px;
-    margin-bottom: -10px;
-  }
-  
-  .rc_table {
-    border-spacing: 25px;
-    /* border:1px solid black; */
-    width: 380px;
-    font-size: 20px;
-    margin: auto;
-  }
-  
-  /* report card */
-  h1{
-    color : white;
-  }
-  
-  .card{
-    position: relative;
-    width: 400px;
-    height: fit-content;
-    background-color: white;
-    margin-left : auto;
-    margin-right: auto;
-    border-radius: 20px;
-    overflow: hidden;
-    box-shadow: 0 15px 25px gray;
-    transition : 0.5s;
-    margin-bottom: 50px;
-  }
-  
-  .circle{
-    padding: 15px;
-    height: auto;
-    clip-path: circle(250px at center 0);
-    text-align: center;
-    border-radius: 20px;
-    background-color: #3f51b5;
-  }
-  
-  .content{
-    border: 1px solid red;
-    width: 400px;
-    height: fit-content;
-    margin: auto;
-  }
-  
-  .btn {
-    /* border: 1px solid black; */
-    display: flex;
-    flex-direction: row;
-    margin-top: 40px;
-  }
-  
-  .download-btn {
-    display: block;
-    margin: auto;
-  }
-  
-  .download-btn:hover {
-    border: 1px solid;
-    border-color: #3f51b5;
-    color: white;
-    transform: scale(1.1,1.1);
-  }
-  
+  display: flex;
+  flex-direction: column;
+  /* border:1px solid black; */
+  width: 100%;
+  /* margin: auto; */
+  /* margin-left: -130px; */
+}
+
+.category {
+  /* border: 1px solid black; */
+  display: flex;
+  /* flex-direction: row; */
+  flex-wrap: wrap;
+  width: 100%;
+  /* position: absolute; */
+}
+
+/* circle-progress & table */
+.cp_t {
+  width: 70%;
+  display: flex;
+  flex-direction: row;
+  /* margin: auto;    */
+}
+
+/* report-card header */
+.rc_header {
+  padding: 10px;
+  margin-bottom: -10px;
+}
+
+.rc_table {
+  border-spacing: 25px;
+  /* border:1px solid black; */
+  width: 380px;
+  font-size: 20px;
+  margin: auto;
+}
+
+h1 {
+  color: white;
+}
+
+.card {
+  position: relative;
+  width: 400px;
+  height: fit-content;
+  background-color: white;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 20px;
+  overflow: hidden;
+  box-shadow: 0 15px 25px gray;
+  transition: 0.5s;
+  margin-bottom: 50px;
+}
+
+.circle {
+  padding: 15px;
+  height: auto;
+  clip-path: circle(250px at center 0);
+  text-align: center;
+  border-radius: 20px;
+  background-color: #3f51b5;
+}
+
+.content {
+  border: 1px solid red;
+  width: 400px;
+  height: fit-content;
+  margin: auto;
+}
+
+.btn {
+  /* border: 1px solid black; */
+  display: flex;
+  flex-direction: row;
+  margin-top: 40px;
+}
+
+.download-btn {
+  display: block;
+  margin: auto;
+}
+
+.download-btn:hover {
+  border: 1px solid;
+  border-color: #3f51b5;
+  color: white;
+  transform: scale(1.1, 1.1);
+}
+
