--- a/src/app/components/talent/my-grades-table/my-grades-table.component.html
+++ b/src/app/components/talent/my-grades-table/my-grades-table.component.html
@@ -6,53 +6,61 @@
 </div>
 
 <div class="tab-container">
-  <!-- Filter -->
-  <div class="tab-container-flex">
-    <div class="tab-container-flex-grow">
-      <mat-form-field appearance="outline">
-        <mat-label>Filter</mat-label>
-        <input matInput (keyup)="applyFilter($event)" placeholder="Value" #input>
-      </mat-form-field>
-    </div>
+  <!-- Loder if API is not Fatched -->
+  <div *ngIf="loading else loaded">
+    Loading ...
   </div>
-  <!-- table contain -->
-  <div class="table-container">
-    <div class="programs-table-container">
-      <table mat-table [dataSource]="dataSource" matSort>
-        <!-- Title column -->
-        <ng-container matColumnDef="programTitle">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Program Name </th>
-          <td mat-cell *matCellDef="let row" class="programTitle-col"> {{row.title}} </td>
-        </ng-container>
-        <!-- ID column -->
-        <ng-container matColumnDef="programID" sticky>
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
-          <td mat-cell *matCellDef="let row" class="programID-col"> {{row.id}} </td>
-        </ng-container>
-        <!-- Trainer name -->
-        <ng-container matColumnDef="skills">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> Skills </th>
-          <td mat-cell *matCellDef="let row" class="trainers-col"> {{row.completed}} </td>
-          <!-- Progress -->
-        </ng-container> <ng-container matColumnDef="overallgrades">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> Overall Grades </th>
-          <td mat-cell *matCellDef="let row" class="skills-col"> {{row.userId}} </td>
-        </ng-container>
-        <!-- Download -->
-        <ng-container matColumnDef="download">
-          <th mat-header-cell *matHeaderCellDef> Download </th>
-          <td mat-cell *matCellDef="let row" class="download-button-col">
-            <button mat-raised-button class="download-button" color="primary" [routerLink]="['/my-grades',row.id]">Download</button>
-          </td>
-        </ng-container>
-        <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-        <!-- Row shown when there is no matching data. -->
-        <tr class="mat-row" *matNoDataRow>
-          <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
-        </tr>
-      </table>
+  <ng-template #loaded>
+    <!-- Filter -->
+    <div class="tab-container-flex">
+      <div class="tab-container-flex-grow">
+        <mat-form-field appearance="outline">
+          <mat-label>Filter</mat-label>
+          <input matInput (keyup)="applyFilter($event)" placeholder="Value" #input>
+        </mat-form-field>
+      </div>
     </div>
-  </div>
-  <mat-paginator class="paginator" [pageSizeOptions]="[10, 25, 100]" aria-label="Select page of users"></mat-paginator>
+    <!-- table contain -->
+    <div class="table-container">
+      <div class="programs-table-container">
+        <table mat-table [dataSource]="dataSource" matSort>
+          <!-- Title column -->
+          <ng-container matColumnDef="programTitle">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Program Name </th>
+            <td mat-cell *matCellDef="let row" class="programTitle-col"> {{row.title}} </td>
+          </ng-container>
+          <!-- ID column -->
+          <ng-container matColumnDef="programID" sticky>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
+            <td mat-cell *matCellDef="let row" class="programID-col"> {{row.id}} </td>
+          </ng-container>
+          <!-- Trainer name -->
+          <ng-container matColumnDef="skills">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Skills </th>
+            <td mat-cell *matCellDef="let row" class="trainers-col"> {{row.completed}} </td>
+            <!-- Progress -->
+          </ng-container> <ng-container matColumnDef="overallgrades">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Overall Grades </th>
+            <td mat-cell *matCellDef="let row" class="skills-col"> {{row.userId}} </td>
+          </ng-container>
+          <!-- Download -->
+          <ng-container matColumnDef="download">
+            <th mat-header-cell *matHeaderCellDef> View Detailed Grades </th>
+            <td mat-cell *matCellDef="let row" class="download-button-col">
+              <button mat-raised-button class="download-button" color="primary"
+                [routerLink]="['/my-grades',row.id]">View Grades</button>
+            </td>
+          </ng-container>
+          <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+          <!-- Row shown when there is no matching data. -->
+          <tr class="mat-row" *matNoDataRow>
+            <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+          </tr>
+        </table>
+      </div>
+    </div>
+    <mat-paginator class="paginator" [pageSizeOptions]="[10, 25, 100]"
+      aria-label="Select page of users"></mat-paginator>
+  </ng-template>
 </div>
