--- a/src/app/components/side-nav-bar/side-nav-bar.component.css
+++ b/src/app/components/side-nav-bar/side-nav-bar.component.css
@@ -1,9 +1,10 @@
 .sidenav-item-selected {
-    background-color: rgba(63,81,181,.15);
+    background-color: rgba(63, 81, 181, .15);
 }
-  
-.sidenav-container{
-    width: 240px                                                                                                                                                        ;
+
+.sidenav-container {
+    width: 240px;
+    min-height: 150vh;
 }
 
 .drawer-content {
@@ -14,4 +15,11 @@
 .drawer-div {
     margin: 12px;
     border-radius: 4px;
+}
+
+@media (max-width: 599px) {
+    .drawer-content {
+        max-height: calc(100vh - 56px);
+        min-height: calc(100vh - 56px);
+    }
 }
