--- a/src/app/components/admin/assign-role/assign-role.component.html
+++ b/src/app/components/admin/assign-role/assign-role.component.html
@@ -17,19 +17,23 @@
       <table mat-table [dataSource]="dataSource" matSort>
         <ng-container matColumnDef="index">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Index</th>
-          <td mat-cell *matCellDef="let row">
-            {{ row.index }}
+          <td
+            mat-cell
+            *matCellDef="let row; let i = index"
+            class="indexContainer"
+          >
+            {{ i + 1 }}
           </td>
         </ng-container>
-        <ng-container matColumnDef="name" sticky>
+        <ng-container matColumnDef="name">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
-          <td mat-cell *matCellDef="let row">
+          <td mat-cell *matCellDef="let row" class="nameContainer">
             {{ row.name }}
           </td>
         </ng-container>
         <ng-container matColumnDef="role">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Role</th>
-          <td mat-cell *matCellDef="let row">
+          <td mat-cell *matCellDef="let row" class="roleContainer">
             {{ row.role }}
           </td>
         </ng-container>
@@ -37,7 +41,7 @@
           <th mat-header-cell *matHeaderCellDef mat-sort-header>
             Edit / Delete
           </th>
-          <td mat-cell *matCellDef="let row">
+          <td mat-cell *matCellDef="let row" class="editContainer">
             <button mat-icon-button color="primary">
               <mat-icon>edit</mat-icon>
             </button>
@@ -55,8 +59,10 @@
       </table>
     </div>
     <mat-paginator
-      [pageSizeOptions]="[5, 10, 25, 100]"
+      #paginator
+      [pageSizeOptions]="[5, 10, 25]"
       aria-label="Select page of users"
+      showFirstLastButtons
     ></mat-paginator>
   </div>
 </div>
